[gd_scene load_steps=8 format=3 uid="uid://bgkalsj0pbtng"]

[ext_resource type="Texture2D" uid="uid://b11787ll8jtt7" path="res://Game V2/Sprites/Settings button-Sheet.png" id="1_ggg8l"]
[ext_resource type="Script" path="res://Game V2/scripts/settings_btn.gd" id="1_h784e"]
[ext_resource type="Shader" path="res://Game V2/scripts/Shaders/color_swap.gdshader" id="3_w4nib"]
[ext_resource type="Texture2D" uid="uid://dnl7dh2yx3s6v" path="res://Game V2/Sprites/Settings button hover frame.png" id="4_c0ii1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7bha7"]
shader = ExtResource("3_w4nib")
shader_parameter/target_color_1 = null
shader_parameter/replace_color_1 = null
shader_parameter/target_color_2 = null
shader_parameter/replace_color_2 = null
shader_parameter/tolerance = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2j7o6"]
shader = ExtResource("3_w4nib")
shader_parameter/target_color_1 = null
shader_parameter/replace_color_1 = null
shader_parameter/target_color_2 = null
shader_parameter/replace_color_2 = null
shader_parameter/tolerance = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxhoq"]
size = Vector2(48, 48)

[node name="SettingsBtn" type="Node2D"]
script = ExtResource("1_h784e")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_7bha7")
position = Vector2(24, 24)
texture = ExtResource("1_ggg8l")

[node name="Hover_border" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_2j7o6")
position = Vector2(24, 24)
texture = ExtResource("4_c0ii1")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(24, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_bxhoq")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
